# learning_stuffs

./: CMakeLists.txt  README.md
guides/: BIG_NOTES_MATH.txt  BIG_NOTES_VULKAN.TXT  cmakeguide.txt
shaders/: compile.bat  shader.slang  slang.spv
src/: includes.hpp  main.cpp  random_utils.cpp  shader.slang  vertex.cpp
